# cheetah_ros

./: README.md
cheetah_basic_controllers/: CMakeLists.txt  cheetah_basic_controllers_plugins.xml  package.xml
cheetah_basic_controllers/cfg/: Feet.cfg
cheetah_basic_controllers/config/: default.yaml
cheetah_basic_controllers/include/cheetah_basic_controllers/: controller_base.h  cpp_types.h  feet_controller.h  foot_swing_trajectory.h  joints_controller.h  state_estimate.h
cheetah_basic_controllers/launch/: load_controllers.launch
cheetah_basic_controllers/src/: controller_base.cpp  feet_controller.cpp  foot_swing_trajectory.cpp  state_estimate.cpp
cheetah_common/: CMakeLists.txt  package.xml
cheetah_common/include/cheetah_common/: cpp_types.h  math_utilities.h
cheetah_common/include/cheetah_common/hardware_interface/: contact_sensor_interface.h  hybrid_joint_interface.h
cheetah_control/: CMakeLists.txt  cheetah_control_plugins.xml  package.xml
cheetah_control/cfg/: Feet.cfg
cheetah_control/config/: default.yaml
cheetah_control/include/cheetah_control/: controller_base.h  feet_controller.h  foot_swing_trajectory.h  state_estimate.h
cheetah_control/launch/: load_controllers.launch
cheetah_control/src/: controller_base.cpp  feet_controller.cpp  foot_swing_trajectory.cpp  state_estimate.cpp
cheetah_controllers/: CMakeLists.txt  cheetah_controllers_plugins.xml  package.xml
cheetah_controllers/config/: default.yaml
cheetah_controllers/include/cheetah_controllers/: gait.h  locomotion.h  mpc_formulation.h  mpc_solver.h  state_estimate.h
cheetah_controllers/launch/: load_controllers.launch
cheetah_controllers/src/: locomotion.cpp  mpc_formulation.cpp  state_estimate.cpp
cheetah_controllers/test/: mpc_formulation_test.cpp  mpc_solver_test.cpp
cheetah_gazebo/: CMakeLists.txt  cheetah_hw_sim_plugins.xml  package.xml
cheetah_gazebo/config/: default.yaml  imus.yaml
cheetah_gazebo/include/cheetah_gazebo/: cheetah_hw_sim.h
cheetah_gazebo/launch/: empty_world.launch
cheetah_gazebo/src/: cheetah_hw_sim.cpp
cheetah_mpc_controllers/: CMakeLists.txt  cheetah_mpc_controllers_plugins.xml  package.xml
cheetah_mpc_controllers/cfg/: Weight.cfg
cheetah_mpc_controllers/config/: default.yaml
cheetah_mpc_controllers/include/cheetah_mpc_controllers/: gait.h  jump_controller.h  locomotion.h  mpc_controller.h  mpc_formulation.h  mpc_solver.h
cheetah_mpc_controllers/launch/: load_controllers.launch
cheetah_mpc_controllers/src/: jump_controller.cpp  locomotion.cpp  mpc_controller.cpp  mpc_formulation.cpp
cheetah_mpc_controllers/test/: mpc_formulation_test.cpp  mpc_solver_test.cpp  trajectory_test.cpp
cheetah_msgs/: CMakeLists.txt  package.xml
cheetah_msgs/msg/: LegPrefix.msg  LegsCmd.msg  LegsState.msg  MotorState.msg
cheetah_ros/: CMakeLists.txt  package.xml
qpoases_catkin/: CMakeLists.txt
unitree_common/: CMakeLists.txt  package.xml
unitree_common/include/unitree_common/hardware_interface/: hybrid_joint_interface.h
unitree_control/: CMakeLists.txt  package.xml  unitree_control_plugins.xml
unitree_control/cfg/: Feet.cfg
unitree_control/config/: default.yaml
unitree_control/include/unitree_control/: control_base.h  controller_base.h  cpp_types.h  feet_controller.h  foot_swing_trajectory.h  interpolation.h  legs_controller.h  legs_controllers.h  state_estimate.h
unitree_control/launch/: load_controllers.launch
unitree_control/src/: control_base.cpp  controller_base.cpp  feet_controller.cpp  foot_swing_trajectory.cpp  legs_controller.cpp  legs_controllers.cpp  state_estimate.cpp
unitree_description/: CMakeLists.txt  package.xml
unitree_description/launch/: check_joint.launch
unitree_description/urdf/: robot.xacro
unitree_description/urdf/a1/: const.xacro
unitree_description/urdf/aliengo/: const.xacro
unitree_description/urdf/common/: gazebo.xacro  leg.xacro
unitree_gazebo/: CMakeLists.txt  package.xml  unitree_hw_sim_plugins.xml
unitree_gazebo/include/unitree_gazebo/: unitree_hw_sim.h
unitree_gazebo/src/: unitree_hw_sim.cpp
unitree_hw/: CMakeLists.txt  package.xml
unitree_hw/config/: default.yaml
unitree_hw/include/unitree_hw/: control_loop.h  hardware_interface.h
unitree_hw/src/: control_loop.cpp  hardware_interface.cpp  unitree_hw.cpp
unitree_msgs/: CMakeLists.txt  package.xml
unitree_msgs/msg/: FeetCmd.msg  LegCmd.msg  LegsCmd.msg  LegsState.msg
unitree_ros/: CMakeLists.txt  package.xml
