<?xml version="1.0"?>
<package format="2">
    <name>cheetah_control</name>
    <version>0.0.0</version>
    <description>The cheetah_control packages.</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>roslint</depend>
    <depend>pluginlib</depend>
    <depend>controller_interface</depend>
    <depend>realtime_tools</depend>
    <depend>cheetah_common</depend>
    <depend>cheetah_msgs</depend>
    <depend>pinocchio</depend>
    <depend>dynamic_reconfigure</depend>

    <exec_depend>controller_manager</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/cheetah_control_plugins.xml"/>
    </export>
</package>
