<?xml version="1.0"?>
<package format="2">
    <name>cheetah_mpc_controllers</name>
    <version>0.0.0</version>
    <description>The cheetah_control packages.</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>roslint</depend>
    <depend>controller_interface</depend>
    <depend>cheetah_basic_controllers</depend>
    <depend>qpoases_vendor</depend>

    <exec_depend>controller_manager</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/cheetah_mpc_controllers_plugins.xml"/>
    </export>
</package>
